--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ You should download this file for your lab, but you should not edit its contents
 		<script src="maze.js" type="text/javascript"></script>
 	</head>
 
-	<body>
+	<body id="body">
 		<h1>The Amazing Mouse Maze!</h1>
 		<h2 id="status">Move your mouse over the "S" to begin.</h2>
 
@@ -24,7 +24,6 @@ You should download this file for your lab, but you should not edit its contents
 			<div class="boundary"></div>
 			<div id="end">E</div>
 		</div>
-
 		<p>
 			The object of this game is to guide the mouse cursor through the start area and get to the end area.  Be sure to avoid the walls:
 		</p>
